2016-04-13  Daniel Bates  <dabates@apple.com>

        REGRESSION (r199401): Internal builds of Safari hang on launch
        https://bugs.webkit.org/show_bug.cgi?id=156545
        <rdar://problem/25697779>

        As pointed out by Darin Adler, remove RELEASE_ASSERT() that I inadvertently left in
        WebCore::secCodeForProcess() as part of r199504. For now, we handle
        SecCodeCopyGuestWithAttributes() returning an error. In a subsequent commit we will
        look to re-introduce the use of a RELEASE_ASSERT() to enforce the invariant that
        SecCodeCopyGuestWithAttributes() returns a success status.

        * Shared/mac/CodeSigning.mm:
        (WebKit::secCodeForProcess):

2016-04-13  Brady Eidson  <beidson@apple.com>

        Modern IDB (Blob support): Support retrieving Blobs from IDB.
        https://bugs.webkit.org/show_bug.cgi?id=156367

        Reviewed by Alex Christensen.

        * NetworkProcess/FileAPI/NetworkBlobRegistry.cpp:
        (WebKit::NetworkBlobRegistry::registerBlobURLOptionallyFileBacked):
        * NetworkProcess/FileAPI/NetworkBlobRegistry.h:
        
        * NetworkProcess/NetworkConnectionToWebProcess.cpp:
        (WebKit::NetworkConnectionToWebProcess::registerBlobURLOptionallyFileBacked):
        * NetworkProcess/NetworkConnectionToWebProcess.h:
        * NetworkProcess/NetworkConnectionToWebProcess.messages.in:
        
        * WebProcess/FileAPI/BlobRegistryProxy.cpp:
        (WebKit::BlobRegistryProxy::registerBlobURLOptionallyFileBacked):
        * WebProcess/FileAPI/BlobRegistryProxy.h:

2016-04-13  Chris Dumez  <cdumez@apple.com>

        We should not speculatively revalidate cached redirects
        https://bugs.webkit.org/show_bug.cgi?id=156548
        <rdar://problem/25583886>

        Reviewed by Darin Adler.

        Stop speculatively revalidating cached redirects. This matches matches
        the behavior in NetworkCache's makeUseDecision() which reuses cached